Removed scrollReveal functionality and deleted all references to it

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <p><span class="show-year-span">There was a total of</span> <span id="show-period-figure"></span> kilotons of emissions <span id="period-span">throughout the period</span>.</p>
                 </div>
                 <div id="pie-container" class="col-xl-6">
-                    <div class="popup reveal" onclick="chartPopup()">
+                    <div class="popup" onclick="chartPopup()">
                         <span class="popuptext" id="myPopup">Hover over the slices to see more information<i class="fa fa-window-close" aria-hidden="true"></i></span>
                     </div>
                     <div id="total-emissions-per-source-pie"></div>
@@ -153,8 +153,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.12/crossfilter.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dc/2.1.8/dc.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/queue-async/1.0.7/queue.min.js"></script>
-    <!-- Page scroll scripts -->
-    <script src="https://unpkg.com/scrollreveal"></script>
+    <!-- Page Scroll Script -->
     <script src="assets/js/pageScroll.js"></script>
     <!-- Custom scripts -->
     <script src="assets/js/chartScript.js"></script>
