Deleted text.scss import into style.scss and added 2nd <p> loader-wrapper

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <div id="loader-wrapper">
         <div id="loader"></div>
         <p>Loading...</p>
+        <p>For an optimum experience, view this dashboard on a laptop or desktop device!</p>
     </div>
     <noscript id="no-js-display">
         <div>
