--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
         <h1>UK Road Transport Greenhouse Gas Emissions 1990-2016</h1>
         <h2>Interactive Data Dashboard</h2>
     </nav>
+    <div class="alert alert-danger text-center" role="alert">
+         <span><strong>NOTE:</strong> This dashboard is best viewed with a device that has a mouse/trackpad, such as a laptop or desktop PC.</span>
+    </div>
     <main class="container-fluid">
         <section class="intro-text row">
             <div class="fa-div col-12 text-center">
