Added close button to alert

--- a/index.html
+++ b/index.html
@@ -40,8 +40,11 @@
         <h1>UK Road Transport Greenhouse Gas Emissions 1990-2016</h1>
         <h2>Interactive Data Dashboard</h2>
     </nav>
-    <div class="alert alert-danger text-center" role="alert">
-         <span><strong>NOTE:</strong> This dashboard is best viewed with a device that has a mouse/trackpad, such as a laptop or desktop PC.</span>
+    <div class="alert alert-danger alert-dismissable fade show text-center" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label-"Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+        <span><strong>NOTE:</strong> This dashboard is best viewed with a device that has a mouse/trackpad, such as a laptop or desktop PC.</span>
     </div>
     <main class="container-fluid">
         <section class="intro-text row">
