--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <div id="total-emissions-per-source" class="col-xl-6"></div>
                 <div class="selector-container col-12">
                     <p>Select year:</p>
-                    <select id="year-selector-2"></select>
+                    <select multiple id="year-selector-2"></select>
                 </div>
         </section>
     </main>
