--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <div id="year-selector"></div>
                 </div>
                 <div class="text-center col-12">
-                    <p><span class="show-year-span">There was a total of</span> <span id="show-period-figure"></span> kilotons of emissions <span id="period-span">throughout the period</span>.</p>
+                    <p><span class="show-year-span">There was a total of</span> <span id="show-period-figure"></span> kilotons of emissions <span id="period-span">throughout the whole period.</span>.</p>
                 </div>
                 <div id="pie-container" class="col-xl-6">
                     <div class="popup" onclick="chartPopup()">
