--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
                 </div>
                 <div class="selector-container col-12">
                     <p>Select year:</p>
+                    <p>Hold ctrl (Windows) or cmd (Mac) whilst clicking to select multiple years.</p>
                     <div id="year-selector"></div>
                 </div>
                 <div class="text-center col-12">
@@ -133,6 +134,7 @@
                 <div id="total-emissions-per-source" class="col-xl-6"></div>
                 <div class="selector-container col-12">
                     <p>Select year:</p>
+                    <p>Hold ctrl (Windows) or cmd (Mac) whilst clicking to select multiple years.</p>
                     <select multiple id="year-selector-2"></select>
                 </div>
         </section>
