--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div id="composite-chart" class="col-xl-6"></div>
             <div class="selector-container col-12">
                 <p>Select vehicle type:</p>
-                <select id="source-selector-2"></select>
+                <select multiple id="source-selector-2"></select>
             </div>
         </section>
 
