--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
             </div>
             <div class="selector-container col-12">
                 <p>Select vehicle type:</p>
+                <p>Hold ctrl (Windows) or cmd (Mac) whilst clicking to select multiple vehicle types.</p>
                 <div id="source-selector" class="col-12"></div>
             </div>
             <div class="text-center col-12">
@@ -103,6 +104,7 @@
             <div id="composite-chart" class="col-xl-6"></div>
             <div class="selector-container col-12">
                 <p>Select vehicle type:</p>
+                <p>Hold ctrl (Windows) or cmd (Mac) whilst clicking to select multiple vehicle types.</p>
                 <select multiple id="source-selector-2"></select>
             </div>
         </section>
