Adjusted intro image to float with text on larger viewports, sit at bottom of text on smaller. Resized and compressed image

--- a/index.html
+++ b/index.html
@@ -63,12 +63,16 @@
             <a href="#charts" class="chart-jump col-12 text-center"><p>Jump to Charts</p></a>
             <div class="offset-md-1 col-md-10">
                 <h2 class="text-uppercase text-center">Introduction</h2>
+                <figure class="d-none d-lg-block">
+                    <img class="figure-img rounded" src="assets/images/congestion-smaller.jpg" alt="Congestion on UK roads">
+                    <figcaption class="figure-caption text-center">Congestion on UK roads is becoming a major problem. With congestion comes an increase in pollution.</figcaption>
+                </figure>
                 <p>A greenhouse gas is a gas that absorbs and emits radiant energy within the thermal infrared range, causing the greenhouse effect. On Earth, the primary greenhouse gases within the atmosphere are water vapour, carbon dioxide, methane, nitrous oxide and ozone.</p>
                 <p>Greenhouse gases and the greenhouse effect are not neccessarily bad things. Without them, the temperature of the Earth's surface would be on average about -18&#176;C (0&#176;F), rather than the present average of 15&#176;C (59&#176;F). At such low temperatures, life on Earth would be vastly different if not impossible, and human society would likely have not come to exist.</p>
                 <p>However, since the dawn of the Industrial Revolution in around 1750, human activities have increased the atmospheric concentration of greenhouse gases. This is of concern, as the current scientific consensus holds that anthropogenic (human) greenhouse gas emissions will lead to a rise in average global temperatures over the next few decades, with potentially harmful effects on ecosystems, biodiversity, and the economy.</p>
                 <p>Road transport in particular is a major contributor to greenhouse gas emissions in many countries. In the UK, as of 2018 <a href="https://www.independent.co.uk/environment/air-pollution-uk-transport-most-polluting-sector-greenhouse-gas-emissions-drop-carbon-dioxide-a8196866.html" target="_blank">the majority of man-made greenhouse gas emissions come from road transport</a>. The dashboard below visualises the latest official statistics available from UK government sources, covering road transport emissions between the years 1990 and 2016. More information on the statistics used to generate this dashboard can be found <a href="https://www.gov.uk/government/statistics/final-uk-greenhouse-gas-emissions-national-statistics-1990-2016" target="_blank">here</a>.</p>
-                <figure>
-                    <img class="figure-img rounded" src="assets/images/congestion.jpg" alt="Congestion on UK roads">
+                <figure class="d-lg-none">
+                    <img class="figure-img rounded" src="assets/images/congestion-smaller.jpg" alt="Congestion on UK roads">
                     <figcaption class="figure-caption text-center">Congestion on UK roads is becoming a major problem. With congestion comes an increase in pollution.</figcaption>
                 </figure>
             </div>
