Added class .img-figure to intro img to only target that figure with new styles from last commit

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <a href="#charts" class="chart-jump col-12 text-center"><p>Jump to Charts</p></a>
             <div class="offset-md-1 col-md-10">
                 <h2 class="text-uppercase text-center">Introduction</h2>
-                <figure class="d-none d-lg-block">
+                <figure class="img-figure d-none d-lg-block">
                     <img class="figure-img rounded" src="assets/images/congestion-smaller.jpg" alt="Congestion on UK roads">
                     <figcaption class="figure-caption text-center">Congestion on UK roads is becoming a major problem. With congestion comes an increase in pollution.</figcaption>
                 </figure>
