--- a/index.html
+++ b/index.html
@@ -112,6 +112,12 @@
                 <p><span id="show-source-span">There was a total of</span> <span id="accounted"></span> <span id="show-time-figure"></span> kilotons of emissions throughout the period.</p>
                 <p id="percentage-p">That is <span id="show-time-figure-percentage"></span> of the emissions for the period.</p>
             </div>
+            <div class="col-12">
+                <button class="reset-button text-center" onclick="resetTimeCharts()">
+                    <strong>Reset Charts</strong>
+                    <i class="fas fa-redo"></i>
+                </button>
+            </div>
             <div id="total-emissions-over-time" class="col-xl-6"></div>
             <div id="composite-chart" class="col-xl-6"></div>
             <div class="selector-container col-12">
