--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <p id="percentage-p">That is <span id="show-time-figure-percentage"></span> of the emissions for the period.</p>
             </div>
             <div class="col-12">
-                <button class="reset-button text-center" onclick="resetTimeCharts()">
+                <button class="reset-button text-center" onclick="resetSourceSelects()">
                     <strong>Reset Charts</strong>
                     <i class="fas fa-redo"></i>
                 </button>
@@ -142,6 +142,12 @@
                 </div>
                 <div class="text-center col-12">
                     <p><span class="show-year-span">There was a total of</span> <span id="show-period-figure"></span> kilotons of emissions <span id="period-span">throughout the whole period.</span>.</p>
+                </div>
+                <div class="col-12">
+                    <button class="reset-button text-center" onclick="resetYearSelects()">
+                        <strong>Reset Charts</strong>
+                        <i class="fas fa-redo"></i>
+                    </button>
                 </div>
                 <div id="pie-container" class="col-xl-6">
                     <div class="popup" onclick="chartPopup()">
