Modified resetSelects() to reset the duplicate select boxes

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <p id="percentage-p">That is <span id="show-time-figure-percentage"></span> of the emissions for the period.</p>
             </div>
             <div class="col-12">
-                <button class="reset-button text-center" onclick="resetSelects(sourceSelectMenu)">
+                <button class="reset-button text-center" onclick="resetSelects(sourceSelectMenu, '#source-selector-2')">
                     <strong>Reset Charts</strong>
                     <i class="fas fa-redo"></i>
                 </button>
@@ -144,7 +144,7 @@
                     <p><span class="show-year-span">There was a total of</span> <span id="show-period-figure"></span> kilotons of emissions <span id="period-span">throughout the whole period.</span>.</p>
                 </div>
                 <div class="col-12">
-                    <button class="reset-button text-center" onclick="resetSelects(yearSelectMenu)">
+                    <button class="reset-button text-center" onclick="resetSelects(yearSelectMenu, '#year-selector-2')">
                         <strong>Reset Charts</strong>
                         <i class="fas fa-redo"></i>
                     </button>
