--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <p>Hold ctrl (Windows) or cmd (Mac) whilst clicking to select multiple vehicle types.</p>
                 <div id="source-selector" class="col-12"></div>
             </div>
-            <div class="text-center col-12">
+            <div class="text-center col-12 selection-description">
                 <p><span id="show-source-span">There was a total of</span> <span id="accounted"></span> <span id="show-time-figure"></span> kilotons of emissions throughout the period.</p>
                 <p id="percentage-p">That is <span id="show-time-figure-percentage"></span> of the emissions for the period.</p>
             </div>
@@ -140,7 +140,7 @@
                     <p>Hold ctrl (Windows) or cmd (Mac) whilst clicking to select multiple years.</p>
                     <div id="year-selector"></div>
                 </div>
-                <div class="text-center col-12">
+                <div class="text-center col-12 selection-description">
                     <p><span class="show-year-span">There was a total of</span> <span id="show-period-figure"></span> kilotons of emissions <span id="period-span">throughout the whole period.</span>.</p>
                 </div>
                 <div class="col-12">
