--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
         <section>
             <h2 class="text-uppercase text-center ">Highlights</h2>
             <figure class="row text-center">
-                <div id="total-emissions-figure highlights-figure" class="col-12"></div>
+                <div id="total-emissions-figure" class="col-12 highlights-figure"></div>
                 <figcaption class="col-12">Kilotons of greenhouse gasses emitted by UK road transport betwen 1990-2016.</figcaption>
             </figure>
             <figure class="row text-center">
-                <div id="average-emissions-figure highlights-figure" class="col-12"></div>
+                <div id="average-emissions-figure" class="col-12 highlights-figure"></div>
                 <figcaption class="col-12">Average kilotons of emissions emitted each year.</figcaption>
             </figure>
         </section>
