Changed total emissions by type of vehicle text to bullet points

--- a/index.html
+++ b/index.html
@@ -174,8 +174,13 @@
         <section class="row">
             <h2 class="text-uppercase text-center">Total emissions by type of vehicle.</h2>
             <div class="offset-md-1 col-md-10">
-                <p>Cars are responsible for the bulk of emissions over the period, with petrol cars being the biggest contributor to the total emissions figure. However, although emissions from petrol cars have nearly halved since 1990, emissions from diesel cars are now 10x what they were in 1990. Diesel as a fuel source has <a href="https://www.autoexpress.co.uk/car-news/consumer-news/98747/diesel-ban-the-future-of-diesel-cars-in-the-uk-and-beyond" target="_blank">attracted much negative criticism</a> in recent years, with this criticism perhaps stemming from diesel's rapid increase in pollution. There have even been calls for a <a href="https://www.theguardian.com/environment/2018/aug/23/ban-diesel-cars-from-cities-say-half-of-uk-drivers-in-poll" target="_blank">ban on diesel cars</a> in urban areas.</p>
-                <p>You can hover over the pie chart's slices or bar chart's bars in order to see the exact value that is represented.</p>
+                <ul>
+                    <li><span class="fa-li" ><i class="fas fa-arrow-circle-right"></i></span>Cars are responsible for the bulk of emissions over the period.</li>
+                    <li><span class="fa-li" ><i class="fas fa-arrow-circle-right"></i></span>Although emissions from petrol cars have nearly halved since 1990, emissions from diesel cars are now 10x what they were in 1990.</li>
+                    <li><span class="fa-li" ><i class="fas fa-arrow-circle-right"></i></span>Emissions from diesel vehicles show no signs of slowing.</li>
+                </ul>
+                <!--<p>Cars are responsible for the bulk of emissions over the period, with petrol cars being the biggest contributor to the total emissions figure. However, although emissions from petrol cars have nearly halved since 1990, emissions from diesel cars are now 10x what they were in 1990. Diesel as a fuel source has <a href="https://www.autoexpress.co.uk/car-news/consumer-news/98747/diesel-ban-the-future-of-diesel-cars-in-the-uk-and-beyond" target="_blank">attracted much negative criticism</a> in recent years, with this criticism perhaps stemming from diesel's rapid increase in pollution. There have even been calls for a <a href="https://www.theguardian.com/environment/2018/aug/23/ban-diesel-cars-from-cities-say-half-of-uk-drivers-in-poll" target="_blank">ban on diesel cars</a> in urban areas.</p>-->
+                <!--<p>You can hover over the pie chart's slices or bar chart's bars in order to see the exact value that is represented.</p>-->
             </div>
             
             <!-- Year Select Box -->
