Added 'Most Polluting Year' to Highlights

--- a/index.html
+++ b/index.html
@@ -106,13 +106,20 @@
         <!-- Highlights Section -->
         <section>
             <h2 class="text-uppercase text-center ">Highlights</h2>
+            <!-- Total Emissions Figure -->
             <figure class="row text-center">
                 <div id="total-emissions-figure" class="col-12 highlights-figure"></div>
                 <figcaption class="col-12">Kilotons of greenhouse gasses emitted by UK road transport betwen 1990-2016.</figcaption>
             </figure>
+            <!-- Average Emissions Figure -->
             <figure class="row text-center">
                 <div id="average-emissions-figure" class="col-12 highlights-figure"></div>
                 <figcaption class="col-12">Average kilotons of emissions emitted each year.</figcaption>
+            </figure>
+            <!-- Most Polluting Year -->
+            <figure class="row text-center">
+                <div id="top-year-figure" class="col-12 highlights-figure"></div>
+                <figcaption class="col-12">Most polluting year on record.</figcaption>
             </figure>
         </section>
         
