Renamed 'total emissions over the period' section to 'total emissions over time'

--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
         
         <hr>
         
-        <!-- Total Emissions Over The Period Section -->
+        <!-- Total Emissions Over Time Section -->
         <section class="row">
-            <h2 class="text-uppercase text-center">Total emissions over the period.</h2>
+            <h2 class="text-uppercase text-center">Total emissions over time.</h2>
             <div class="offset-md-1 col-md-10">
                 <ul>
                     <li><span class="fa-li" ><i class="fas fa-arrow-circle-right"></i></span>Emissions from road transport rose steadily between 1990 and 2007.</li>
