--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             
             <!-- Reset Button -->
             <div class="col-12">
-                <button class="reset-button text-center" onclick="resetSelects(sourceSelectMenu, '#source-selector-2')">
+                <button class="reset-button text-center" onclick="resetSelects(sourceSelectMenu, '#source-selector-2', true)">
                     <strong>Reset Charts</strong>
                     <i class="fas fa-redo"></i>
                 </button>
