Added missing 'true' argument to 2nd reset button

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             
             <!-- Reset Button -->
             <div class="col-12">
-                <button class="reset-button text-center" onclick="resetSelects(yearSelectMenu, '#year-selector-2')">
+                <button class="reset-button text-center" onclick="resetSelects(yearSelectMenu, '#year-selector-2', true)">
                     <strong>Reset Charts</strong>
                     <i class="fas fa-redo"></i>
                 </button>
