Used regex to replace only the last whitespace in the multiArray for #period-span

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             
             <!-- Descriptive Text -->
             <div class="text-center col-12 selection-description">
-                <p><span class="show-year-span">There was a total of</span> <span id="show-period-figure"></span> kilotons of emissions <span id="period-span">throughout the whole period.</span>.</p>
+                <p><span class="show-year-span">There was a total of</span> <span id="show-period-figure"></span> kilotons of emissions <span id="period-span">throughout the whole period</span>.</p>
             </div>
             
             <!-- Reset Button -->
