Fixed typo in mouse/trackpad alert attribute

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </nav>
     <!-- Mouse/Trackpad Alert -->
     <div class="alert alert-danger alert-dismissable fade show text-center" role="alert">
-        <button type="button" class="close" data-dismiss="alert" aria-label-"Close">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
         <span><strong>NOTE:</strong> This dashboard is best viewed with a device that has a mouse/trackpad, such as a laptop or desktop PC.</span>
