Added sr-only h2 to first section

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     <main class="container-fluid">
         <!-- Introduction -->
         <section class="intro-text row">
+            <h2 class="sr-only">Introduction</h2> <!--Text for the benefit of screen reader users so they know what this section is composed of-->
             <!-- Font Awesome Icons -->
             <div class="fa-div col-12 text-center">
                 <i class="fas fa-chart-pie"></i>
