Deleted full stops in headings

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         
         <!-- Total Emissions Over Time Section -->
         <section class="row">
-            <h2 class="text-uppercase text-center">Total emissions over time.</h2>
+            <h2 class="text-uppercase text-center">Total emissions over time</h2>
             <div class="offset-md-1 col-md-10">
                 <ul>
                     <li><span class="fa-li" ><i class="fas fa-arrow-circle-right"></i></span>Emissions from road transport rose steadily between 1990 and 2007.</li>
@@ -157,7 +157,7 @@
         
         <!-- Total Emissions By Type Of Vehicle Section -->
         <section class="row">
-            <h2 class="text-uppercase text-center">Total emissions by type of vehicle.</h2>
+            <h2 class="text-uppercase text-center">Total emissions by type of vehicle</h2>
             <div class="offset-md-1 col-md-10">
                 <ul>
                     <li><span class="fa-li" ><i class="fas fa-arrow-circle-right"></i></span>Cars are responsible for the bulk of emissions over the period.</li>
