Modifed design to have a gray body background with white sections

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         
         <!-- Highlights Section -->
         <section class="highlights">
-            <h2 class="text-uppercase text-center ">Highlights</h2>
+            <h2 class="text-uppercase text-center">Highlights</h2>
             <!-- Total Emissions Figure -->
             <figure class="row text-center">
                 <div id="total-emissions-figure" class="col-12 highlights-figure"></div>
@@ -100,7 +100,7 @@
         </section>
 
         <!-- Total Emissions Over Time Section -->
-        <section class="row">
+        <section class="row total-time">
             <h2 class="text-uppercase text-center">Total emissions over time</h2>
             <div class="offset-md-1 col-md-10">
                 <ul>
@@ -149,10 +149,8 @@
             </div>
         </section>
 
-        <hr>
-        
         <!-- Total Emissions By Type Of Vehicle Section -->
-        <section class="row">
+        <section class="row total-vehicle">
             <h2 class="text-uppercase text-center">Total emissions by type of vehicle</h2>
             <div class="offset-md-1 col-md-10">
                 <ul>
