Refactored into .section-styles

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <!-- Main -->
     <main class="container-fluid">
         <!-- Introduction -->
-        <section class="intro-text row">
+        <section class="section-styles row">
             <h2 class="sr-only">Introduction</h2> <!--Text for the benefit of screen reader users so they know what this section is composed of-->
             <!-- Font Awesome Icons -->
             <div class="fa-div col-12 text-center">
@@ -80,7 +80,7 @@
         </section>
         
         <!-- Highlights Section -->
-        <section class="highlights">
+        <section class="section-styles">
             <h2 class="text-uppercase text-center">Highlights</h2>
             <!-- Total Emissions Figure -->
             <figure class="row text-center">
@@ -100,7 +100,7 @@
         </section>
 
         <!-- Total Emissions Over Time Section -->
-        <section class="row total-time">
+        <section class="row section-styles">
             <h2 class="text-uppercase text-center">Total emissions over time</h2>
             <div class="offset-md-1 col-md-10">
                 <ul>
@@ -150,7 +150,7 @@
         </section>
 
         <!-- Total Emissions By Type Of Vehicle Section -->
-        <section class="row total-vehicle">
+        <section class="row section-styles">
             <h2 class="text-uppercase text-center">Total emissions by type of vehicle</h2>
             <div class="offset-md-1 col-md-10">
                 <ul>
