Renamed section-styles-sm-l to section-styles-sm

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <main class="container-fluid">
         <!-- Introduction -->
         <div class="row row-reset">
-            <section class="section-styles-sm-l">
+            <section class="section-styles-sm">
                 <h2 class="sr-only">Introduction</h2> <!--Text for the benefit of screen reader users so they know what this section is composed of-->
                 <!-- Font Awesome Icons -->
                 <div class="fa-div col-12 text-center">
@@ -81,7 +81,7 @@
             </section>
             
             <!-- Highlights Section -->
-            <section class="section-styles-sm-l">
+            <section class="section-styles-sm">
                 <h2 class="text-uppercase text-center">Highlights</h2>
                 <!-- Total Emissions Figure -->
                 <figure class="row text-center">
