Adjusted alert text again

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
-        <span><strong>NOTE:</strong> This dashboard is best viewed with a large device that has a mouse/trackpad, such as a laptop or desktop PC.</span>
+        <span><strong>NOTE:</strong> This dashboard is best viewed on a device with a large screen size that has a mouse/trackpad, such as a laptop or desktop PC.</span>
     </div>
     
     <!-- Main -->
