--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 
                 <!-- Introduction Text and Image -->
                 <div class="offset-md-1 col-md-10">
-                    <p>The dashboard below visualises the latest official statistics available from UK government sources, covering road transport emissions between the years 1990 and 2016. More information on the statistics used to generate this dashboard can be found <a href="https://www.gov.uk/government/statistics/final-uk-greenhouse-gas-emissions-national-statistics-1990-2016" target="_blank">here</a>.</p>
+                    <p>The dashboard below visualises the latest official statistics available from UK government sources, covering road transport emissions between the years 1990 and 2016. More information on the statistics used to generate this dashboard can be found on the <a href="https://www.gov.uk/government/statistics/final-uk-greenhouse-gas-emissions-national-statistics-1990-2016" target="_blank">gov.uk website</a>.</p>
                 </div>
             </section>
             
