--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
     
     <!-- Navbar -->
     <nav class="navbar navbar-dark">
-        <h1>UK Road Transport Greenhouse Gas Emissions 1990-2016</h1>
-        <h2>Interactive Data Dashboard</h2>
+        <h1>UK Road Transport Greenhouse Gas Emissions 1990-2016<p class="text-center">Interactive Data Dashboard</p></h1>
     </nav>
     <!-- Mouse/Trackpad Alert -->
     <div class="alert alert-danger alert-dismissable fade show text-center" role="alert">
