--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             
             <!-- Vehicle Select Box -->
             <div class="selector-container col-12">
-                <p>Select vehicle type:</p>
+                <p><label>Select vehicle type:</label></p>
                 <p>Hold ctrl (Windows) or cmd (Mac) whilst clicking to select multiple vehicle types.</p>
                 <div id="source-selector" class="col-12"></div>
             </div>
