Adapted nested p in h1 to be a span, changed styles appropriately

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
     
     <!-- Navbar -->
     <nav class="navbar navbar-dark">
-        <h1>UK Road Transport Greenhouse Gas Emissions 1990-2016<p class="text-center">Interactive Data Dashboard</p></h1>
+        <h1 class="text-center">UK Road Transport Greenhouse Gas Emissions 1990-2016
+            <span>Interactive Data Dashboard</span>
+        </h1>
     </nav>
     <!-- Mouse/Trackpad Alert -->
     <div class="alert alert-danger alert-dismissable fade show text-center" role="alert">
