Deleted label near top select box, text now sits directly in p again

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             
             <!-- Vehicle Select Box -->
             <div class="selector-container col-12">
-                <p><label>Select vehicle type:</label></p>
+                <p>Select vehicle type:</p>
                 <p>Hold ctrl (Windows) or cmd (Mac) whilst clicking to select multiple vehicle types.</p>
                 <div id="source-selector" class="col-12"></div>
             </div>
