--- a/index.html
+++ b/index.html
@@ -49,9 +49,15 @@
     
     <!-- Navbar -->
     <nav class="navbar navbar-dark">
+        <div class="fa-div-navbar">
+            <i class="fas fa-chart-pie"></i>
+        </div>
         <h1 class="text-center">UK Road Transport Greenhouse Gas Emissions 1990-2016
             <span>Interactive Data Dashboard</span>
         </h1>
+        <div class="fa-div-navbar">
+            <i class="fas fa-chart-line"></i>
+        </div>
     </nav>
     
     <!-- Mouse/Trackpad Alert -->
@@ -70,8 +76,6 @@
                 <h2 class="sr-only">Introduction</h2> <!--Text for the benefit of screen reader users so they know what this section is composed of-->
                 <!-- Font Awesome Icons -->
                 <div class="fa-div col-12 text-center">
-                    <i class="fas fa-chart-pie"></i>
-                    <i class="fas fa-chart-line"></i>
                     <i class="fas fa-chart-bar"></i>
                     <i class="fas fa-chart-area"></i>
                 </div>
