Altered 'no javascript' message

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
     <!-- No JS Display -->
     <noscript id="no-js-display">
         <div>
-            <p><span>No Javascript Detected!</span></p>
+            <p><span>No JavaScript Detected!</span></p>
             <i class="far fa-frown"></i>
-            <p>Please enable Javascript to view the dashboard</p>
+            <p>Please enable JavaScript to view the dashboard</p>
         </div>
     </noscript>
     
