--- a/index.html
+++ b/index.html
@@ -164,13 +164,16 @@
 
         <!-- Total Emissions By Type Of Vehicle Section -->
         <section class="row section-styles">
-            <h2 class="text-uppercase text-center">Total emissions by type of vehicle</h2>
-            <div class="offset-md-1 col-md-10">
-                <ul>
-                    <li><span class="fa-li" ><i class="fas fa-arrow-circle-right"></i></span>Cars are responsible for the bulk of emissions over the period.</li>
-                    <li><span class="fa-li" ><i class="fas fa-arrow-circle-right"></i></span>Although emissions from petrol cars have nearly halved since 1990, emissions from diesel cars are now 10x what they were in 1990.</li>
-                    <li><span class="fa-li" ><i class="fas fa-arrow-circle-right"></i></span>Emissions from diesel vehicles show no signs of slowing.</li>
-                </ul>
+            <h2 class="text-uppercase text-center col-12">Total emissions by type of vehicle</h2>
+            <div class="offset-md-1 col-md-5 offset-xl-2 col-xl-4">
+                <p><span class="fa-li" ><i class="fas fa-arrow-circle-right"></i></span>Cars are responsible for the bulk of emissions over the period.</p>
+                <p><span class="fa-li" ><i class="fas fa-arrow-circle-right"></i></span>Although emissions from petrol cars have nearly halved since 1990, emissions from diesel cars are now 10x what they were in 1990.</p>
+            </div>
+            <div class="col-md-5 offset-xl-1 col-xl-4">
+                <p><span class="fa-li" ><i class="fas fa-arrow-circle-right"></i></span>HGV emissions, which dipped after the financial crisis of 2008, still haven't reached pre-recession levels.</p>
+                <p><span class="fa-li" ><i class="fas fa-arrow-circle-right"></i></span>LPG, Motorcycle and Moped vehicles make up a very small fraction of overall emissions.</p>
+
+            </div>
             </div>
             
             <!-- Year Select Box -->
