Changed total emissions over time descriptive text to contain 4 bullets in a 2 column layout

--- a/index.html
+++ b/index.html
@@ -117,13 +117,14 @@
 
         <!-- Total Emissions Over Time Section -->
         <section class="row section-styles">
-            <h2 class="text-uppercase text-center">Total emissions over time</h2>
-            <div class="offset-md-1 col-md-10">
-                <ul>
-                    <li><span class="fa-li" ><i class="fas fa-arrow-circle-right"></i></span>Emissions from road transport rose steadily between 1990 and 2007.</li>
-                    <li><span class="fa-li" ><i class="fas fa-arrow-circle-right"></i></span>Beginning in 2008 emissions began to dip, reaching a period low of 108,134 kilotons in 2013.</li>
-                    <li><span class="fa-li" ><i class="fas fa-arrow-circle-right"></i></span>Since 2013 emissions have been on the rise again, although for the latest period (2016) emissions are about the same level as they were in the early 90's.</li>
-                </ul>
+            <h2 class="text-uppercase text-center col-12">Total emissions over time</h2>
+            <div class="offset-md-1 col-md-5 offset-xl-2 col-xl-4">
+                <p><span class="fa-li" ><i class="fas fa-arrow-circle-right"></i></span>Emissions from road transport rose steadily between 1990 and 2007.</p>
+                <p><span class="fa-li" ><i class="fas fa-arrow-circle-right"></i></span>Beginning in 2008 emissions began to dip, reaching a period low of 108,134 kilotons in 2013.</p>
+            </div>
+            <div class="col-md-5 offset-xl-1 col-xl-4">
+            <p><span class="fa-li" ><i class="fas fa-arrow-circle-right"></i></span>Since 2013 emissions have been on the rise again, although for the latest period (2016) emissions are about the same level as they were in the early 90's.</p>
+                <p><span class="fa-li" ><i class="fas fa-arrow-circle-right"></i></span>It remains to be seen what effect the increasing market share of electric vehicles will have on emissions.</p>
             </div>
             
             <!-- Vehicle Select Box -->
@@ -172,7 +173,6 @@
             <div class="col-md-5 offset-xl-1 col-xl-4">
                 <p><span class="fa-li" ><i class="fas fa-arrow-circle-right"></i></span>HGV emissions, which dipped after the financial crisis of 2008, still haven't reached pre-recession levels.</p>
                 <p><span class="fa-li" ><i class="fas fa-arrow-circle-right"></i></span>LPG, Motorcycle and Moped vehicles make up a very small fraction of overall emissions.</p>
-
             </div>
             </div>
             
