Changed nav to header

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </noscript>
     
     <!-- Navbar -->
-    <nav class="navbar navbar-dark">
+    <header class="navbar navbar-dark">
         <div class="fa-div-navbar">
             <i class="fas fa-chart-pie"></i>
         </div>
@@ -61,7 +61,7 @@
         <div class="fa-div-navbar">
             <i class="fas fa-chart-line"></i>
         </div>
-    </nav>
+    </header>
     
     <!-- Mouse/Trackpad Alert -->
     <div class="alert alert-danger alert-dismissable fade show text-center" role="alert">
