--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="assets/stylesheets/style.css" type="text/css" />
     
     <!-- HEAD SCRIPTS -->
-    <!-- Placed here due to the need for them to load before the rest of the content -->
+    <!-- Placed here as opposed to closing body tag due to the need for them to load before the rest of the content -->
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <!-- Loading -->
