--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
     </noscript>
     
-    <!-- Navbar -->
+    <!-- Header -->
     <header class="navbar navbar-dark .d-print">
         <div class="fa-div-navbar">
             <i class="fas fa-chart-pie"></i>
