Deleted redundant print class from header

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </noscript>
     
     <!-- Header -->
-    <header class="navbar navbar-dark .d-print">
+    <header class="navbar navbar-dark">
         <div class="fa-div-navbar">
             <i class="fas fa-chart-pie"></i>
         </div>
