--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <!-- Total Emissions Over Time Composite Chart -->
             <div class="col-xl-6">
                 <h3 class="text-center">Comparative emissions for vehicle types over time</h3>
-                <div id="composite-chart" class="col-xl-6"></div>
+                <div id="composite-chart"></div>
             </div>
             
             <!-- Duplicate Select Box -->
@@ -222,7 +222,7 @@
             <!-- Bar Chart -->
             <div class="col-xl-6">
                 <h3 class="text-center">Emissions per vehicle type within seleted time period</h3>
-                <div id="total-emissions-per-source" class="col-xl-6"></div>
+                <div id="total-emissions-per-source"></div>
             </div>
             
             <!-- Duplicate Select Box -->
