--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             
             <!-- Bar Chart -->
             <div class="col-xl-6">
-                <h3 class="text-center">Emissions per vehicle type within seleted time period</h3>
+                <h3 class="text-center">Emissions per vehicle type within selected time period</h3>
                 <div id="total-emissions-per-source"></div>
             </div>
             
