Removed functionality resetting the other section's select boxes when the user manipulates a first section

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             
             <div class="col-12">
                 <!-- Reset Button -->
-                <button class="reset-button text-center" onclick="resetSelects(sourceSelectMenu, '#source-selector-2', true)">
+                <button class="reset-button text-center" onclick="resetSelects(sourceSelectMenu, '#source-selector-2')">
                     <strong>Reset Charts</strong>
                     <i class="fas fa-redo"></i>
                 </button>
@@ -193,7 +193,7 @@
             
             <!-- Reset Button -->
             <div class="col-12">
-                <button class="reset-button text-center" onclick="resetSelects(yearSelectMenu, '#year-selector-2', true)">
+                <button class="reset-button text-center" onclick="resetSelects(yearSelectMenu, '#year-selector-2')">
                     <strong>Reset Charts</strong>
                     <i class="fas fa-redo"></i>
                 </button>
