--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </div>
             
             <!-- Vehicle Select Box -->
-            <div class="selector-container col-12">
+            <div id="source-selector-container" class="selector-container col-12">
                 <p>Select vehicle type:</p>
                 <p>Hold ctrl (Windows) or cmd (Mac) whilst clicking to select multiple vehicle types.</p>
                 <div id="source-selector" class="col-12"></div>
@@ -172,7 +172,7 @@
             </div>
             
             <!-- Year Select Box -->
-            <div class="selector-container col-12">
+            <div id="year-selector-container" class="selector-container col-12">
                 <p>Select year:</p>
                 <p>Hold ctrl (Windows) or cmd (Mac) whilst clicking to select multiple years.</p>
                 <div id="year-selector"></div>
