--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
                 
                 <!-- Most Polluting Year -->
                 <figure class="row text-center">
-                    <div id="top-year-figure" class="col-12 highlights-figure"></div>
+                    <!-- Hardcoded value used here -->
+                    <div id="top-year-figure" class="col-12 highlights-figure">2007</div>
                     <figcaption class="col-12">Most polluting year on record.</figcaption>
                 </figure>
             </section>
